tmp.log
In file included from include/woody.h:71,
                 from include/opts.h:4,
                 from include/asm.h:6,
                 from src/asm.c:1:
include/polyblock.h:134:5: error: conflicting types for ‘polyblock_resolve_sizes’; have ‘int(t_asm *, t_polyctx *, size_t)’ {aka ‘int(struct s_asm *, struct s_polyctx *, long unsigned int)’}
  134 | int polyblock_resolve_sizes(t_asm *a, t_polyctx *ctx, size_t initial_position);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
include/polyblock.h:128:5: note: previous declaration of ‘polyblock_resolve_sizes’ with type ‘int(t_asm *, t_polyctx *)’ {aka ‘int(struct s_asm *, struct s_polyctx *)’}
  128 | int polyblock_resolve_sizes(t_asm *a, t_polyctx *ctx);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
src/asm.c:303:5: error: conflicting types for ‘polyblock_resolve_sizes’; have ‘int(t_asm *, t_polyctx *, size_t)’ {aka ‘int(struct s_asm *, struct s_polyctx *, long unsigned int)’}
  303 | int polyblock_resolve_sizes(t_asm *a, t_polyctx *ctx, size_t initial_position)
      |     ^~~~~~~~~~~~~~~~~~~~~~~
In file included from include/woody.h:71,
                 from include/opts.h:4,
                 from include/asm.h:6,
                 from src/asm.c:1:
include/polyblock.h:128:5: note: previous declaration of ‘polyblock_resolve_sizes’ with type ‘int(t_asm *, t_polyctx *)’ {aka ‘int(struct s_asm *, struct s_polyctx *)’}
  128 | int polyblock_resolve_sizes(t_asm *a, t_polyctx *ctx);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:30: obj/asm.o] Error 1
